# raspi

./: .gitignore  CLAUDE.md  README.md  deploy.py  install-hooks.sh  inventory.example.py  pyproject.toml  secrets.py  vault.py
.claude/: settings.json
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml
docs/: raspi-dashboard-plan.md  status.md
files/: 52unattended-upgrades-rpi  fail2ban-jail.local  journald.conf  router-update-wg-firewall.sh  router-update-wg-firewall.sh.example  sshd_config
group_data/: .stignore  all.example.py  features.py  raspi.py  raspo.py
tasks/: audiobookshelf.py  beszel.py  beszel_agent.py  bootstrap.py  camera.py  chat.py  cifs.py  cloudflare_dns.py  ddns.py  diun.py  gatus.py  halo.py  hardening.py  hcc.py  host_discover.py  kanidm.py  kanidm_oidc.py  kuma_setup.py  mcp_chat.py  memos.py  navidrome.py  network_monitor.py  network_restrict.py  ntfy.py  oauth2_proxy.py  ocular.py  party.py  pihole.py  podman.py  raspi_dashboard.py  represent.py  restic.py  scribe.py  secrets.py  secrets_files.py  shelf.py  shell.py  shim.py  supersaw.py  syncthing.py  (+13 more)
